--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
+    "dotenv": "^8.2.0",
+    "json-server": "^0.16.3",
     "luxon": "^1.26.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-conc": "concurrently \"react-scripts start\" \"json-server --watch db.json --port 8080\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +50,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^1.26.2",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "concurrently": "^6.0.0"
   }
 }
