--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
+    "bulma-calendar": "^6.0.9",
     "dotenv": "^8.2.0",
     "json-server": "^0.16.3",
     "luxon": "^1.26.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -51,6 +53,8 @@
   "devDependencies": {
     "@types/luxon": "^1.26.2",
     "@types/react-router-dom": "^5.1.7",
-    "concurrently": "^6.0.0"
+    "@types/uuid": "^8.3.0",
+    "concurrently": "^6.0.0",
+    "prettier": "2.2.1"
   }
 }
