--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.13.1",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "bulma-calendar": "^6.0.9",
