--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://flavioccf.github.io/react-pet-appointment",
   "name": "react-pet-appointment",
   "version": "0.1.0",
   "private": true,
@@ -27,8 +28,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-conc": "concurrently \"react-scripts start\" \"json-server --watch db.json --port 8080\"",
+    "predeploy":"yarn build",
+    "deploy":"gh-pages -d build",
+    "start-prev": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"json-server --watch db.json --port 8080\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +59,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "concurrently": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   }
 }
