--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://flavioccf.github.io/react-pet-appointment",
+  "homepage": ".",
   "name": "react-pet-appointment",
   "version": "0.1.0",
   "private": true,
